--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 body, html {
   background-color: #f7f7f7;
+  font-size: 12pt !important;
+}
+
+a{
+  text-decoration: none;
+  color: #333 !important;
+}
+
+.active{
+  font-weight: bold;
+}
+
+@media only screen and (min-width: 992px) {
+  .navbar{
+    background-color: white !important;
+  }
 }
